# ChangeLog for x11-plugins/ecomorph
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ecomorph-9999 (15 Sep 2009)

  15 Sep 2009; Andrian Nord <NightNord@niifaq.ru> +ecomp-9999.ebuild,
  +metadata.xml:
  initial addition. Dependencies and automagic =(