@@ -1,6 +1,9 @@
-# ChangeLog for x11-plugins/ecomorph
+# ChangeLog for x11-wm/ecomp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  15 Sep 2009; Andrian Nord <NightNord@niifaq.ru> ecomp-9999.ebuild:
+  filter --as-needed LDFLAGS as it breaks plugins loading
 
 *ecomorph-9999 (15 Sep 2009)
 
